# rust-postgres-interval

./: .gitignore  Cargo.toml
src/: lib.rs  pg_interval.rs
src/integrations/: duration.rs  mod.rs  rust_default.rs
