[package]
name = "me_pg_interval"
version = "0.3.2"
edition = "2018"
authors = ["Marcel Schmidt <msc@maennl.info>","Ryan Piper <piper.ryan235@gmail.com>"]
license = "MIT"
description = "A native PostgreSQL interval type, based on https://github.com/piperRyan/rust-postgres-interval"
repository = "https://github.com/maennl/rust-postgres-interval.git"
readme = "README.md"
keywords = ["database", "postgres", "postgresql", "sql", "interval"]
include = ["src/*", "Cargo.toml", "LICENSE", "README.md"]
categories = ["date-and-time"]
publish=false

[dependencies]
bytes = "1.0.1"
postgres-types = { version = "^0.1.3", optional = true }
chrono = "0.4.19"
postgres="0.17.5"
